[tool.poetry]
name = "hypermodern-python"
description = "The hypermodern Python project"

version = "0.1.0"
authors = ["Maxwell Volz <mvolz@fb.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/<your-username>/hypermodern-python"
repository = "https://github.com/<your-username>/hypermodern-python"
keywords = ["hypermodern"] 

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

